# rstan

./: Cargo.toml  Justfile  README.md  composer.json  rustfmt.toml
crates/rstan/: Cargo.toml
crates/rstan-cli/: Cargo.toml
crates/rstan-cli/src/: arguments.rs  main.rs
crates/rstan/fixtures/basic/: code.php  rstan.toml
crates/rstan/src/: lib.rs  trinary_logic.rs
crates/rstan/src/analyzer/: analyzer.rs
crates/rstan/src/analyzer/scope/: mod.rs  scope.rs  scope_factory.rs
crates/rstan/src/internals/: mod.rs
crates/rstan/src/node/: mod.rs
crates/rstan/src/php/: mod.rs  php_version.rs
crates/rstan/src/reflection/: class_reflection.rs  constant_reflection.rs  extended_method_reflection.rs  method_reflection.rs  mod.rs  parameters_acceptor.rs
crates/rstan/src/reflection/answerer/: class_member_access_answerer.rs  mod.rs  namespace_answerer.rs
crates/rstan/src/reflection/provider/: mod.rs
crates/rstan/src/reflection/type/: mod.rs  unresolved_method_prototype_reflection.rs  unresolved_property_prototype_reflection.rs
crates/rstan/src/type/: array_type.rs  boolean_type.rs  generalize_precision.rs  mod.rs  never_type.rs  object_type.rs  string_type.rs  type.rs  verbosity_level.rs
crates/rstan/src/type/constant/: constant_array_type.rs  constant_scalar_type.rs  constant_scalar_value.rs  constant_string_type.rs  constant_type.rs  mod.rs
crates/rstan/src/type/enum/: enum_case_object_type.rs  mod.rs
crates/rstan/src/type/generic/: mod.rs  template_type_map.rs  template_type_reference.rs  template_type_variance.rs
src/: arguments.rs  configuration.rs  main.rs  (+2 more)
(+23 files in other folders)
