[package]
name = "rstan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "0.3.0"
clap = { version = "4.3.23", features = ["string", "derive"] }
clap-verbosity-flag = "2.0.1"
env_logger = "0.10.0"
log = "0.4.20"
php-parser-rs = { git = "https://github.com/php-rust-tools/parser", version = "0.1.3" }
serde = { version = "1.0.185", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
toml = "0.7.6"
