[package]
name = "rstan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
php-parser-rs = { git = "https://github.com/php-rust-tools/parser", version = "0.1.3" }
phpdoc-parser = { version = "*", path = "../phpdoc-parser" }
serde = { version = "1.0.185", features = ["derive"] }
toml = "0.7.6"
